--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,11 @@
-DATABASE_URL="mysql://root:qazmll456*@127.0.0.1:3306/db_name"
+DATABASE_URL="mysql://root:password@127.0.0.1:3306/db_name"
 
 DB_TYPE=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=password
-DB_NAME=elbowCinema
+DB_NAME=db_name
 
 PORT=3000
 JWT_SECRET=elbow_token
