--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "authorization-authentication-multi-layered",
+  "name": "48-2nd-teamelbow-backend",
   "version": "1.0.0",
-  "description": "```JavaScript POST :8000/auth/signup // 회원가입 Endpoint POST :8000/auth/signin // 로그인 Endpoint ```",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dbmate": "^2.5.0",
     "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
+    "routes": "^2.1.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
