--- a/.env.sample
+++ b/.env.sample
@@ -8,5 +8,6 @@ DB_PASSWORD=password
 DB_NAME=db_name
 
 PORT=3000
-JWT_SECRET=elbow_token
-
+JWT_ALGORITHM=HS256
+JWT_SECRET=token
+JWT_EXPIRE_IN=9d
