--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "48-2nd-teamelbow-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,5 +22,6 @@
   "devDependencies": {
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": ""
 }
